crates/apollo-compiler/test_data/diagnostics/0074_merge_identical_fields.txt
Error: operation must not select different types using the same field name `name`
    ╭─[0074_merge_identical_fields.graphql:19:3]
    │
 18 │   name: nickname
    │   ───────┬──────  
    │          ╰──────── `name` has type `String` here
 19 │   name
    │   ──┬─  
    │     ╰─── but the same field name has type `String!` here
────╯
Error: operation must not select different fields to the same alias `name`
    ╭─[0074_merge_identical_fields.graphql:19:3]
    │
 18 │   name: nickname
    │   ───────┬──────  
    │          ╰──────── field `name` is selected from field `nickname` here
 19 │   name
    │   ──┬─  
    │     ╰─── but the same field `name` is also selected from field `name` here
────╯
Error: operation must not select different types using the same field name `fido`
    ╭─[0074_merge_identical_fields.graphql:24:3]
    │
 23 │   fido: name
    │   ─────┬────  
    │        ╰────── `fido` has type `String!` here
 24 │   fido: nickname
    │   ───────┬──────  
    │          ╰──────── but the same field name has type `String` here
────╯
Error: operation must not select different fields to the same alias `fido`
    ╭─[0074_merge_identical_fields.graphql:24:3]
    │
 23 │   fido: name
    │   ─────┬────  
    │        ╰────── field `fido` is selected from field `name` here
 24 │   fido: nickname
    │   ───────┬──────  
    │          ╰──────── but the same field `fido` is also selected from field `nickname` here
────╯

